Fixing sizing issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,6 @@ body {
     align-items: center;
     text-align: right;
     color: #DCE8FF;
-    overflow-x: hidden;
     position: relative;
 }
 
